--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "@emotion/react": "^11.1.4",
     "@mdx-js/react": "^1.6.21",
     "clsx": "^1.1.1",
+    "lodash": "^4.17.20",
     "react": "^16.8.4",
-    "react-dom": "^16.8.4"
+    "react-dom": "^16.8.4",
+    "react-flexbox-grid": "^2.1.2",
+    "react-lazyload": "^3.1.0"
   },
   "browserslist": {
     "production": [
@@ -35,6 +38,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-transform-react-display-name": "^7.12.1",
     "@docusaurus/module-type-aliases": "^2.0.0-alpha.70",
     "@emotion/babel-plugin": "^11.1.2",
     "@emotion/babel-preset-css-prop": "^11.0.0",
@@ -48,7 +52,9 @@
     "@typescript-eslint/parser": "^4.0.0",
     "add": "^2.0.6",
     "babel-eslint": "^10.0.0",
+    "babel-plugin-lodash": "^3.3.4",
     "babel-plugin-module-resolver": "^4.1.0",
+    "docusaurus-plugin-module-alias": "^0.0.2",
     "eslint": "^7.5.0",
     "eslint-config-react-app": "^6.0.0",
     "eslint-config-standard": "^16.0.2",
