--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   },
   "dependencies": {
     "@docusaurus/core": "2.0.0-alpha.70",
+    "@docusaurus/plugin-google-analytics": "^2.0.0-alpha.70",
+    "@docusaurus/plugin-google-gtag": "^2.0.0-alpha.70",
+    "@docusaurus/plugin-ideal-image": "^2.0.0-alpha.70",
     "@docusaurus/preset-classic": "2.0.0-alpha.70",
     "@emotion/react": "^11.1.4",
     "@mdx-js/react": "^1.6.21",
