--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@mdx-js/react": "^1.6.21",
     "clsx": "^1.1.1",
     "lodash": "^4.17.20",
+    "posthog-docusaurus": "^1.0.3",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-flexbox-grid": "^2.1.2",
