--- a/package.json
+++ b/package.json
@@ -78,5 +78,6 @@
     "eslint-plugin-standard": "^5.0.0",
     "typescript": "^4.1.3",
     "yarn": "^1.22.10"
-  }
+  },
+  "packageManager": "yarn@3.2.0"
 }
