--- a/package.json
+++ b/package.json
@@ -14,20 +14,21 @@
     "eslint:fix": "NODE_ENV=development eslint src --ext .js,.ts,.tsx --fix"
   },
   "dependencies": {
-    "@docusaurus/core": "2.0.0-alpha.70",
-    "@docusaurus/plugin-google-analytics": "^2.0.0-alpha.70",
-    "@docusaurus/plugin-google-gtag": "^2.0.0-alpha.70",
-    "@docusaurus/plugin-ideal-image": "^2.0.0-alpha.70",
-    "@docusaurus/preset-classic": "2.0.0-alpha.70",
-    "@emotion/react": "^11.1.4",
-    "@mdx-js/react": "^1.6.21",
+    "@docusaurus/core": "2.0.0-beta.18",
+    "@docusaurus/plugin-google-analytics": "^2.0.0-beta.18",
+    "@docusaurus/plugin-google-gtag": "^2.0.0-beta.18",
+    "@docusaurus/plugin-ideal-image": "^2.0.0-beta.18",
+    "@docusaurus/preset-classic": "2.0.0-beta.18",
+    "@docusaurus/theme-common": "^2.0.0-beta.18",
+    "@emotion/react": "^11.9.0",
+    "@mdx-js/react": "^1.6.22",
     "clsx": "^1.1.1",
-    "lodash": "^4.17.20",
+    "lodash": "^4.17.21",
     "posthog-docusaurus": "^1.0.3",
-    "react": "^16.8.4",
-    "react-dom": "^16.8.4",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-flexbox-grid": "^2.1.2",
-    "react-lazyload": "^3.1.0"
+    "react-lazyload": "^3.2.0"
   },
   "browserslist": {
     "production": [
@@ -42,42 +43,42 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-transform-react-display-name": "^7.12.1",
-    "@docusaurus/module-type-aliases": "^2.0.0-alpha.70",
-    "@emotion/babel-plugin": "^11.1.2",
-    "@emotion/babel-preset-css-prop": "^11.0.0",
-    "@emotion/eslint-plugin": "^11.0.0",
-    "@eslint/eslintrc": "^0.2.1",
-    "@tsconfig/docusaurus": "^1.0.2",
-    "@types/react": "^17.0.0",
-    "@types/react-helmet": "^6.1.0",
-    "@types/react-router-dom": "^5.1.7",
-    "@typescript-eslint/eslint-plugin": "^4.0.0",
-    "@typescript-eslint/parser": "^4.0.0",
+    "@babel/plugin-transform-react-display-name": "^7.16.7",
+    "@docusaurus/module-type-aliases": "^2.0.0-beta.18",
+    "@emotion/babel-plugin": "^11.9.2",
+    "@emotion/babel-preset-css-prop": "^11.2.0",
+    "@emotion/eslint-plugin": "^11.7.0",
+    "@eslint/eslintrc": "^1.2.1",
+    "@tsconfig/docusaurus": "^1.0.5",
+    "@types/react": "^18.0.2",
+    "@types/react-helmet": "^6.1.5",
+    "@types/react-lazyload": "^3.2.0",
+    "@types/react-router-dom": "^5.3.3",
+    "@typescript-eslint/eslint-plugin": "^5.19.0",
+    "@typescript-eslint/parser": "^5.19.0",
     "add": "^2.0.6",
-    "babel-eslint": "^10.0.0",
+    "babel-eslint": "^10.1.0",
     "babel-plugin-lodash": "^3.3.4",
     "babel-plugin-module-resolver": "^4.1.0",
     "docusaurus-plugin-module-alias": "^0.0.2",
-    "eslint": "^7.5.0",
-    "eslint-config-react-app": "^6.0.0",
-    "eslint-config-standard": "^16.0.2",
+    "eslint": "^8.13.0",
+    "eslint-config-react-app": "^7.0.0",
+    "eslint-config-standard": "^16.0.3",
     "eslint-config-standard-react": "^11.0.1",
     "eslint-import-resolver-alias": "^1.1.2",
-    "eslint-import-resolver-babel-module": "^5.2.0",
-    "eslint-import-resolver-typescript": "^2.3.0",
+    "eslint-import-resolver-babel-module": "^5.3.1",
+    "eslint-import-resolver-typescript": "^2.7.1",
     "eslint-loader": "^4.0.2",
     "eslint-plugin-emotion": "^11.0.0",
-    "eslint-plugin-flowtype": "^5.2.0",
-    "eslint-plugin-import": "^2.22.0",
-    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-flowtype": "^8.0.3",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-react": "^7.20.3",
-    "eslint-plugin-react-hooks": "^4.0.8",
+    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-react": "^7.29.4",
+    "eslint-plugin-react-hooks": "^4.4.0",
     "eslint-plugin-standard": "^5.0.0",
-    "typescript": "^4.1.3",
-    "yarn": "^1.22.10"
+    "typescript": "^4.6.3"
   },
   "packageManager": "yarn@3.2.0"
 }
