--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "docusaurus start --port 3002",
     "build": "docusaurus build",
     "swizzle": "docusaurus swizzle",
-    "deploy": "docusaurus deploy",
+    "deploy": "netlify deploy --prod",
     "serve": "docusaurus serve",
     "clear": "docusaurus clear",
     "check-types": "tsc",
